add notes for importing

--- a/AKELCO/scrape_AKELCO.ipynb
+++ b/AKELCO/scrape_AKELCO.ipynb
@@ -56,7 +56,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Criteria for downloading: more than 2 nbsp and href link contains nebula"
+    "# Only Jan 2018 to Nov 2022 is machine readable\n",
+    "# Criteria for downloading: more than 2 nbsp and href link contains nebula\n",
+    "# tabula.read_pdf(... , pages=all)"
    ]
   }
  ],
