download machine readable files from AKELCO webpage

--- a/MERALCO/scrape.ipynb
+++ b/MERALCO/scrape.ipynb
@@ -88,7 +88,15 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reached December 2017. Stopping downloads.\n"
+     ]
+    }
+   ],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
