--- a/AKELCO/scrape_AKELCO.ipynb
+++ b/AKELCO/scrape_AKELCO.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -168,15 +168,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error processing file ​APRIL_2022_-_SEPTEMBER_2022.pdf: Unknown string format: ​APRIL 2022\n",
-      "Error processing file ​JUNE_2020_-_OCTOBER_2020.pdf: Unknown string format: ​JUNE 2020\n",
       "PDF cannot be read properly.\n",
       "PDF cannot be read properly.\n",
       "PDF cannot be read properly.\n",
@@ -201,6 +199,8 @@
     "\n",
     "# Helper function to parse dates from filename\n",
     "def extract_date_range_from_filename(filename):\n",
+    "    # Remove invisible characters\n",
+    "    filename = ''.join(c for c in filename if c.isprintable())\n",
     "    filename = filename.replace(\".pdf\", \"\").replace(\"_\", \" \")\n",
     "    date_parts = filename.split(\"-\")\n",
     "    start_date = parser.parse(date_parts[0].strip())\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -307,75 +307,75 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Power Supplier</th>\n",
        "      <th>kWh</th>\n",
        "      <th>Average Generation Cost</th>\n",
        "      <th>Generation Charge</th>\n",
        "      <th>Date</th>\n",
-       "      <th>Power Supplier ID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>13,192,790</td>\n",
-       "      <td>5.7857</td>\n",
-       "      <td>9.5509</td>\n",
-       "      <td>Nov-2022</td>\n",
-       "      <td>1</td>\n",
+       "      <td>GCGI</td>\n",
+       "      <td>10,230,422</td>\n",
+       "      <td>5.7785</td>\n",
+       "      <td>7.3671</td>\n",
+       "      <td>May-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4,000</td>\n",
-       "      <td>1,448.0563</td>\n",
-       "      <td>9.5509</td>\n",
-       "      <td>Nov-2022</td>\n",
-       "      <td>2</td>\n",
+       "      <td>PPC</td>\n",
+       "      <td>-</td>\n",
+       "      <td>#DIV/0!</td>\n",
+       "      <td>7.3671</td>\n",
+       "      <td>May-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>6 ,768,569</td>\n",
-       "      <td>11.7418</td>\n",
-       "      <td>9.5509</td>\n",
-       "      <td>Nov-2022</td>\n",
-       "      <td>3</td>\n",
+       "      <td>PEDC</td>\n",
+       "      <td>5 ,789,848</td>\n",
+       "      <td>9.8442</td>\n",
+       "      <td>7.3671</td>\n",
+       "      <td>May-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3 ,287,000</td>\n",
-       "      <td>18.0578</td>\n",
-       "      <td>9.5509</td>\n",
-       "      <td>Nov-2022</td>\n",
-       "      <td>4</td>\n",
+       "      <td>PCPC</td>\n",
+       "      <td>3 ,905,266</td>\n",
+       "      <td>11.3017</td>\n",
+       "      <td>7.3671</td>\n",
+       "      <td>May-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>8 ,798,500</td>\n",
-       "      <td>9.6972</td>\n",
-       "      <td>9.5509</td>\n",
-       "      <td>Nov-2022</td>\n",
-       "      <td>5</td>\n",
+       "      <td>IEMOP</td>\n",
+       "      <td>2 ,967,540</td>\n",
+       "      <td>5.8793</td>\n",
+       "      <td>7.3671</td>\n",
+       "      <td>May-2022</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          kWh Average Generation Cost Generation Charge      Date  \\\n",
-       "0  13,192,790                  5.7857            9.5509  Nov-2022   \n",
-       "1       4,000              1,448.0563            9.5509  Nov-2022   \n",
-       "2  6 ,768,569                 11.7418            9.5509  Nov-2022   \n",
-       "3  3 ,287,000                 18.0578            9.5509  Nov-2022   \n",
-       "4  8 ,798,500                  9.6972            9.5509  Nov-2022   \n",
+       "  Power Supplier         kWh Average Generation Cost Generation Charge  \\\n",
+       "0           GCGI  10,230,422                  5.7785            7.3671   \n",
+       "1            PPC           -                 #DIV/0!            7.3671   \n",
+       "2           PEDC  5 ,789,848                  9.8442            7.3671   \n",
+       "3           PCPC  3 ,905,266                 11.3017            7.3671   \n",
+       "4          IEMOP  2 ,967,540                  5.8793            7.3671   \n",
        "\n",
-       "   Power Supplier ID  \n",
-       "0                  1  \n",
-       "1                  2  \n",
-       "2                  3  \n",
-       "3                  4  \n",
-       "4                  5  "
+       "       Date  \n",
+       "0  May-2022  \n",
+       "1  May-2022  \n",
+       "2  May-2022  \n",
+       "3  May-2022  \n",
+       "4  May-2022  "
       ]
      },
-     "execution_count": 226,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "4          IEMOP                  5"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "4                  5  "
       ]
      },
-     "execution_count": 224,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
