added Processing subheader and Notes

--- a/AEC/scrape_AEC.ipynb
+++ b/AEC/scrape_AEC.ipynb
@@ -236,11 +236,349 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Processing**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = tabula.read_pdf(\"pdf downloads/February 2024 Generation Charge.pdf\", lattice = True, pages=1)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>(A)</th>\n",
+       "      <th>(B)</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>(C)</th>\n",
+       "      <th>(D)</th>\n",
+       "      <th>(E = C + D)</th>\n",
+       "      <th>(F = E/A)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SOURCES</td>\n",
+       "      <td>Net kWh Input</td>\n",
+       "      <td>% Share</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Basic Generation Cost\\r(PhP)</td>\n",
+       "      <td>Other Cost\\rA   d  j u  s  t  m  ents\\r(Discou...</td>\n",
+       "      <td>Total Generation Cost\\r(PhP)</td>\n",
+       "      <td>Average\\rG   e  n  e  r  a  t i  o n\\rCost\\r(P...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1. GNPower Mariveles (Bilateral Contract)</td>\n",
+       "      <td>31,371,946</td>\n",
+       "      <td>51.01%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>P         200,521,700.90</td>\n",
+       "      <td>( 4,108,949.55)</td>\n",
+       "      <td>P        196,412,751.36</td>\n",
+       "      <td>P           6.2608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2. Anda Power Corp. (Bilateral Contract)</td>\n",
+       "      <td>10,765,000</td>\n",
+       "      <td>17.50%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>82,013,093.93</td>\n",
+       "      <td>(368,934.34)</td>\n",
+       "      <td>81,644,159.59</td>\n",
+       "      <td>7.5842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4. WESM (Spot Market)</td>\n",
+       "      <td>18,663,790</td>\n",
+       "      <td>30.35%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>86,779,908.43</td>\n",
+       "      <td>264,405.19</td>\n",
+       "      <td>87,044,313.62</td>\n",
+       "      <td>4.6638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3. Angeles Power Inc. (Bilateral Contract)</td>\n",
+       "      <td>114,862</td>\n",
+       "      <td>0.19%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>17,892,134.25</td>\n",
+       "      <td>-</td>\n",
+       "      <td>17,892,134.25</td>\n",
+       "      <td>155.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5. Net Metering (Export)</td>\n",
+       "      <td>589,141</td>\n",
+       "      <td>0.96%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3,759,073.06</td>\n",
+       "      <td>-</td>\n",
+       "      <td>3,759,073.06</td>\n",
+       "      <td>6.3806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Others:</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Pilferage Recoveries</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>( 585,399.75)</td>\n",
+       "      <td>( 0.0010)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>TOTAL</td>\n",
+       "      <td>61,504,739</td>\n",
+       "      <td>100.00%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>P        390,965,910.57</td>\n",
+       "      <td>(4,213,478.70)</td>\n",
+       "      <td>P       386,167,032.13</td>\n",
+       "      <td>P          6.2787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Automatic Adjustments (ERC Res. 14, S. 2022)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Other Generation Rate Adjustments (OGA)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Generation Rate for FEBRUARY 2024</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>P        6.2787</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      Unnamed: 0            (A)  \\\n",
+       "0                                        SOURCES  Net kWh Input   \n",
+       "1      1. GNPower Mariveles (Bilateral Contract)     31,371,946   \n",
+       "2       2. Anda Power Corp. (Bilateral Contract)     10,765,000   \n",
+       "3                          4. WESM (Spot Market)     18,663,790   \n",
+       "4     3. Angeles Power Inc. (Bilateral Contract)        114,862   \n",
+       "5                       5. Net Metering (Export)        589,141   \n",
+       "6                                        Others:            NaN   \n",
+       "7                           Pilferage Recoveries            NaN   \n",
+       "8                                            NaN            NaN   \n",
+       "9                                          TOTAL     61,504,739   \n",
+       "10                                           NaN            NaN   \n",
+       "11  Automatic Adjustments (ERC Res. 14, S. 2022)            NaN   \n",
+       "12       Other Generation Rate Adjustments (OGA)            NaN   \n",
+       "13                                           NaN            NaN   \n",
+       "14             Generation Rate for FEBRUARY 2024            NaN   \n",
+       "15                                           NaN            NaN   \n",
+       "\n",
+       "                (B)  Unnamed: 1                           (C)  \\\n",
+       "0           % Share         NaN  Basic Generation Cost\\r(PhP)   \n",
+       "1            51.01%         NaN      P         200,521,700.90   \n",
+       "2            17.50%         NaN                 82,013,093.93   \n",
+       "3            30.35%         NaN                 86,779,908.43   \n",
+       "4             0.19%         NaN                 17,892,134.25   \n",
+       "5             0.96%         NaN                  3,759,073.06   \n",
+       "6               NaN         NaN                           NaN   \n",
+       "7               NaN         NaN                           NaN   \n",
+       "8               NaN         NaN                           NaN   \n",
+       "9           100.00%         NaN       P        390,965,910.57   \n",
+       "10              NaN         NaN                           NaN   \n",
+       "11                -         NaN                           NaN   \n",
+       "12                -         NaN                           NaN   \n",
+       "13              NaN         NaN                           NaN   \n",
+       "14  P        6.2787         NaN                           NaN   \n",
+       "15              NaN         NaN                           NaN   \n",
+       "\n",
+       "                                                  (D)  \\\n",
+       "0   Other Cost\\rA   d  j u  s  t  m  ents\\r(Discou...   \n",
+       "1                                     ( 4,108,949.55)   \n",
+       "2                                        (368,934.34)   \n",
+       "3                                          264,405.19   \n",
+       "4                                                   -   \n",
+       "5                                                   -   \n",
+       "6                                                 NaN   \n",
+       "7                                                 NaN   \n",
+       "8                                                 NaN   \n",
+       "9                                      (4,213,478.70)   \n",
+       "10                                                NaN   \n",
+       "11                                                NaN   \n",
+       "12                                                NaN   \n",
+       "13                                                NaN   \n",
+       "14                                                NaN   \n",
+       "15                                                NaN   \n",
+       "\n",
+       "                     (E = C + D)  \\\n",
+       "0   Total Generation Cost\\r(PhP)   \n",
+       "1        P        196,412,751.36   \n",
+       "2                  81,644,159.59   \n",
+       "3                  87,044,313.62   \n",
+       "4                  17,892,134.25   \n",
+       "5                   3,759,073.06   \n",
+       "6                              -   \n",
+       "7                  ( 585,399.75)   \n",
+       "8                            NaN   \n",
+       "9         P       386,167,032.13   \n",
+       "10                           NaN   \n",
+       "11                           NaN   \n",
+       "12                           NaN   \n",
+       "13                           NaN   \n",
+       "14                           NaN   \n",
+       "15                           NaN   \n",
+       "\n",
+       "                                            (F = E/A)  \n",
+       "0   Average\\rG   e  n  e  r  a  t i  o n\\rCost\\r(P...  \n",
+       "1                                  P           6.2608  \n",
+       "2                                              7.5842  \n",
+       "3                                              4.6638  \n",
+       "4                                              155.77  \n",
+       "5                                              6.3806  \n",
+       "6                                                 NaN  \n",
+       "7                                           ( 0.0010)  \n",
+       "8                                                 NaN  \n",
+       "9                                   P          6.2787  \n",
+       "10                                                NaN  \n",
+       "11                                                NaN  \n",
+       "12                                                NaN  \n",
+       "13                                                NaN  \n",
+       "14                                                NaN  \n",
+       "15                                                NaN  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Notes**\n",
+    "- include column containing SOURCES, kWh\n",
+    "- If there are already three columns, it means that the computed column is included\n",
+    "- Computed column is inluded only from Oct 2022 onwards\n",
+    "- keywords for slicing: Contract, WESM, TOTAL"
+   ]
   }
  ],
  "metadata": {
