added notes for processing

--- a/PELCO I/scrape_PELCO_I.ipynb
+++ b/PELCO I/scrape_PELCO_I.ipynb
@@ -264,11 +264,198 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Processing**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = tabula.read_pdf(\"pdf downloads/gen_201801.pdf\", lattice=True, pages=1)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Source</th>\n",
+       "      <th>% to Total\\rKwH\\rPurchased</th>\n",
+       "      <th>( A)\\rKwh\\rPurchased</th>\n",
+       "      <th>(B)\\rBasic Generation\\rCost (Php)</th>\n",
+       "      <th>(   C   )\\rOther Cost\\rAdjustments</th>\n",
+       "      <th>(D= B + C)\\rT   o  t a   l  G  e   n  e  r  a  t i  o  n\\rCost for the month\\r(Php)</th>\n",
+       "      <th>( D/A)\\rAverage\\rGeneration Cost\\r(Php/Kwh)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NPC-TSC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BILATERAL CONTRACTS\\rw/ IPPS\\r1.MPPCL</td>\n",
+       "      <td>100%</td>\n",
+       "      <td>21,038,021</td>\n",
+       "      <td>102,342,120.11</td>\n",
+       "      <td>100,982.50</td>\n",
+       "      <td>102,443,102.61</td>\n",
+       "      <td>4.8694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>WESM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SELF GENERATION</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SALE FOR RESALE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>OTHERS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>TOTAL</td>\n",
+       "      <td>100%</td>\n",
+       "      <td>21,038,021</td>\n",
+       "      <td>102,342,120.11</td>\n",
+       "      <td>100,982.50</td>\n",
+       "      <td>102,443,102.61</td>\n",
+       "      <td>4.8694</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Source % to Total\\rKwH\\rPurchased  \\\n",
+       "0                                NPC-TSC                        NaN   \n",
+       "1  BILATERAL CONTRACTS\\rw/ IPPS\\r1.MPPCL                       100%   \n",
+       "2                                   WESM                        NaN   \n",
+       "3                        SELF GENERATION                        NaN   \n",
+       "4                        SALE FOR RESALE                        NaN   \n",
+       "5                                 OTHERS                        NaN   \n",
+       "6                                  TOTAL                       100%   \n",
+       "\n",
+       "  ( A)\\rKwh\\rPurchased (B)\\rBasic Generation\\rCost (Php)  \\\n",
+       "0                  NaN                               NaN   \n",
+       "1           21,038,021                    102,342,120.11   \n",
+       "2                  NaN                               NaN   \n",
+       "3                  NaN                               NaN   \n",
+       "4                  NaN                               NaN   \n",
+       "5                  NaN                               NaN   \n",
+       "6           21,038,021                    102,342,120.11   \n",
+       "\n",
+       "  (   C   )\\rOther Cost\\rAdjustments  \\\n",
+       "0                                NaN   \n",
+       "1                         100,982.50   \n",
+       "2                                NaN   \n",
+       "3                                NaN   \n",
+       "4                                NaN   \n",
+       "5                                NaN   \n",
+       "6                         100,982.50   \n",
+       "\n",
+       "  (D= B + C)\\rT   o  t a   l  G  e   n  e  r  a  t i  o  n\\rCost for the month\\r(Php)  \\\n",
+       "0                                                NaN                                    \n",
+       "1                                     102,443,102.61                                    \n",
+       "2                                                NaN                                    \n",
+       "3                                                NaN                                    \n",
+       "4                                                NaN                                    \n",
+       "5                                                NaN                                    \n",
+       "6                                     102,443,102.61                                    \n",
+       "\n",
+       "   ( D/A)\\rAverage\\rGeneration Cost\\r(Php/Kwh)  \n",
+       "0                                          NaN  \n",
+       "1                                       4.8694  \n",
+       "2                                          NaN  \n",
+       "3                                          NaN  \n",
+       "4                                          NaN  \n",
+       "5                                          NaN  \n",
+       "6                                       4.8694  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# column with the word CONTRACTS is always the first column to keep\n",
+    "# take everything after CONTRACTS until WESM, take TOTAL\n",
+    "# second column to keep is column with Kwh in column title\n",
+    "# last column to keep is column with Average in column title"
+   ]
   }
  ],
  "metadata": {
